refactor(listener): extract role-restricted group naming into tested helpers
Split the JDA role-name resolution from the pure naming logic in RoleRestrictedChannelListener. The identifier (lowercase, strip to [a-z0-9], sort, join) and display name (the "A", "A & B", "A, B & C" join) are now static formatGroupIdentifier/formatGroupDisplayName helpers taking the already-resolved role names, with the guild lookup done once at the call site. Adds RoleRestrictedGroupNamingTest covering the sanitisation, sorting, ampersand and comma branches and the empty-name fallbacks.